	update: add OS, router, fibre switch dictionary entries for ticket 238 (by Aaron)
	update: update: added comment field for IPv4 networks
	update: allow variations of FC WWN as an L2 address (by killsystem)
	update: port L2 address can be reused on the same object
	update: same port name can be repeated for an object with different types
	bugfix: do not produce PHP warning on LivePTR tab
	bugfix: wrong port type set for WS-C2950-24. closes ticket 229 (by jthurman)
	bugfix: improved IOS detection and fixed a logic error. closes ticket 232 (by jthurman)
	bugfix: user account autotags were not generated under certain conditions (reported by Jason Hamilton)
	bugfix: correctly remove tags, when deleting files
	bugfix: switchvlans failed on "%" or "~" character in port name (by Boris Lytochkin)
	bugfix: search failed, when only one RS pool was found for request
	bugfix: large images could not be rendered often due to memory limit hit
	new feature: rackspace tab is shown only if there is at least one rack
		in the system. Closes ticket 234.
0.17.1 2009-06-03
	bugfix: tags were not displayed on "File" page
	bugfix: multiline comment for an added file was stored incorrectly
	bugfix: user's displayed name was sometimes lost with LDAP auth
	bugfix: rackspace rows highlightling was broken in previous release
	bugfix: IPv4 address picker window was broken
	bugfix: string value "0" was incorrectly handled, when displaying or entering data
	bugfix: rackspace allocation history recording did not work in 0.17.0
	bugfix: boolean expressions parsing in RackCode now honours priorities
	bugfix: upgrade script could fail sometimes
	update: removed unused database index
0.17.0 2009-05-20
	new feature: file attachments (by Aaron)
	new feature: ability to delete objects (by Aaron)
	new feature: external "httpd" user authentication
	new feature: validator in RackCode editor
	new feature: vendor sieve for stickers
	new feature: RackCode expressions as source for load balancer lists